--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
-name = "my-api-project"
+name = "fastapi-base"
 version = "0.0.1"
-description = "My python API"
+description = "Base project for FastAPI projects"
 authors = ["José Nunes <josenunesra@gmail.com>"]
 repository = "https://github.com/josejnra/fastapi-base"
 homepage = "https://github.com/josejnra/fastapi-base"
@@ -35,26 +35,24 @@ fastapi = "^0.81.0"
 uvicorn = "^0.18.3"
 aiofile = "^3.8.1"
 
-[tool.poetry.dev-dependencies]
-pytest = "^7.1.2"
-pytest-cov = "^3.0.0"
-pytest-mock = "^3.8.2"
-black = "^22.6.0"
-flake8 = "^4.0.1"
-isort = "^5.10.1"
-mypy = "^0.971"
-pre-commit = "^2.20.0"
-pre-commit-hooks = "^4.3.0"
-Faker = "^14.2.0"
-
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.1.3"
+pytest-mock = "^3.10.0"
+flake8 = "^5.0.4"
+isort = "^5.10.1"
+pytest-cov = "^4.0.0"
+black = "^22.10.0"
+mypy = "^0.982"
+faker = "^15.1.1"
 
 [tool.black]
 line-length = 120
 target-version = ['py38']
 exclude = [
-    "scripts"
+    ".venv"
 ]
 
 [tool.isort]
@@ -65,7 +63,7 @@ line_length = 88
 
 [tool.mypy]
 exclude = [
-    "scripts"
+    ".venv"
 ]
 
 [build-system]
