--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -89,9 +89,9 @@
     ],
     // Comment out to connect as root instead. More info: https://aka.ms/vscode-remote/containers/non-root.
     "remoteUser": "vscode",
-    "features": {
-        "docker-from-docker": "latest"
-    },
+    // "features": {
+    //     "docker-from-docker": "latest"
+    // },
     // Use 'postCreateCommand' to run commands after the container is created.
     "postCreateCommand": ".devcontainer/setup.sh"
 }
