--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,33 +23,18 @@
 	},
 	"customizations": {
 		"vscode": {
-            "sqltools.connections": [
-                {
-                    "name": "Container database",
-                    "driver": "PostgreSQL",
-                    "previewLimit": 50,
-                    "server": "localhost",
-                    "port": 5432,
-                    "database": "postgres",
-                    "username": "postgres",
-                    "password": "postgres"
-                }
-            ],
-			"extensions": [
+            "extensions": [
+				"ms-azuretools.vscode-docker",
 				"ms-python.python",
-				"dsebastien.vscode-python-pack",
-				"matangover.mypy",
+				"ms-python.autopep8",
+				"ms-python.flake8",
+				"ms-python.pylint",
+				"ms-python.vscode-pylance",
+				"ms-python.mypy-type-checker",
 				"ryanluker.vscode-coverage-gutters",
 				"emeraldwalk.RunOnSave",
-				"ms-azuretools.vscode-docker",
-				"ms-python.vscode-pylance",
 				"eamodio.gitlens",
 				"waderyan.gitblame",
-				"42Crunch.vscode-openapi",
-				"mermade.openapi-lint",
-				"mtxr.sqltools",
-				"mtxr.sqltools-driver-pg",
-				"cschleiden.vscode-github-actions",
 				"tamasfe.even-better-toml"
 			],
 			"settings": {
@@ -62,12 +47,17 @@
 				},
 				// "terminal.integrated.defaultProfile.linux": "poetry-shell",  # spawns a terminal on top of sh 
                 "python.defaultInterpreterPath": "/workspaces/fastapi-base/.venv/bin/python",
+				"mypy.dmypyExecutable": "/workspaces/fastapi-base/.venv/bin/dmypy",
+				"mypy-type-checker.path": ["/workspaces/fastapi-base/.venv/bin/mypy"],
+				"python.testing.pytestPath": "/workspaces/fastapi-base/.venv/bin/pytest",
+				"flake8.interpreter": ["/workspaces/fastapi-base/.venv/bin/flake8"],
+				"flake8.path": ["/workspaces/fastapi-base/.venv/bin/flake8"],
 				"emeraldwalk.runonsave": {
                     "commands": [
                         {
                             "match": ".py",
                             "isAsync": false,
-                            "cmd": "npm run test"
+                            "cmd": "npm run algo"
                         }
                     ]
                 }
