--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/josejnra/fastapi-base"
 documentation = "https://github.com/josejnra/fastapi-base"
 readme = "README.md"
 classifiers = [
-    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3 :: Only",
     "Programming Language :: Python",
     "Operating System :: OS Independent",
@@ -26,40 +26,54 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.10"
-pydantic = "^1.9.1"
-types-python-dateutil = {version = "^2.8.19", optional = true}
-types-pytz = {version = "^2022.1.2", optional = true}
-types-PyYAML = {version = "^6.0.11", optional = true}
-fastapi = "^0.81.0"
-uvicorn = "^0.18.3"
-aiofile = "^3.8.1"
+python = "^3.12"
+types-python-dateutil = {version = "^2.9.0.20240316", optional = true}
+types-pytz = {version ="^2024.1.0.20240417", optional = true}
+types-PyYAML = {version = "^6.0.12.20240808", optional = true}
+fastapi = {extras = ["standard"], version = "^0.112.0"}
+uvicorn = "^0.30.6"
+pydantic-settings = "^2.4.0"
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^7.1.3"
-pytest-mock = "^3.10.0"
-flake8 = "^5.0.4"
-isort = "^5.10.1"
-pytest-cov = "^4.0.0"
-black = "^22.10.0"
-mypy = "^0.982"
-faker = "^15.1.1"
+pytest = "^8.3.2"
+pytest-mock = "^3.14.0"
+isort = "^5.13.2"
+pytest-cov = "^5.0.0"
+flake8 = "^7.1.1"
+black = "^24.8.0"
+mypy = "^1.11.1"
+faker = "^27.0.0"
 
 [tool.black]
 line-length = 120
-target-version = ['py38']
-exclude = [
-    ".venv"
-]
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.eggs
+  | \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
+target-version = ['py312']  # all versions that your code supports
 
 [tool.isort]
+profile = "black"
 multi_line_output = 3
-include_trailing_comma = true
-force_grid_wrap = 0
-line_length = 88
+include_trailing_comma = true  # Includes a trailing comma on multi line imports that include parentheses
+line_length = 120  # max length of an import line
+known_first_party = ["app"]
+sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
+lines_between_sections = 1
 
 [tool.mypy]
 exclude = [
