--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -15,43 +15,28 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+
+      - name: Install poetry
+        run: pipx install poetry
 
       - name: Set up Python
-        uses: actions/setup-python@v3
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+          cache: 'poetry'
 
       - name: Display Python version
         run: python -c "import sys; print(sys.version)"
 
-      - name: Install poetry
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install poetry
-
-      - name: Configure poetry
-        run: python -m poetry config virtualenvs.in-project true
-
-      - name: Set up cache
-        uses: actions/cache@v1
-        id: cache
-        with:
-          path: .venv
-          key: venv-${{ runner.os }}-${{ steps.full-python-version.outputs.version }}-${{ hashFiles('**/poetry.lock') }}
-
-      - name: Ensure cache is healthy
-        if: steps.cache.outputs.cache-hit == 'true'
-        run: python -m poetry run pip --version >/dev/null 2>&1 || rm -rf .venv
-
       - name: Install Dependencies
-        run: python -m poetry install --all-extras
+        run: poetry install --all-extras
 
       - name: Code Quality Check
-        run: python -m poetry run mypy .
+        run: poetry run mypy .
 
       - name: Test
-        run: python -m poetry run pytest --cov --cov=api/ --cov-branch --cov-fail-under=100
+        run: poetry run pytest --cov --cov=api/ --cov-branch --cov-fail-under=100
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
