--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -41,7 +41,7 @@ jobs:
         run: poetry run mypy .
 
       - name: Test
-        run: poetry run pytest --cov --cov=api/ --cov-branch --cov-fail-under=100
+        run: task test
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
