--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,56 +41,50 @@ dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
 pytest-mock = "^3.14.0"
-isort = "^5.13.2"
 pytest-cov = "^5.0.0"
-flake8 = "^7.1.1"
-black = "^24.8.0"
 mypy = "^1.11.1"
 faker = "^27.0.0"
 pyright = "^1.1.375"
 taskipy = "^1.13.0"
+ruff = "^0.6.0"
 
-[tool.black]
-line-length = 120
-include = '\.pyi?$'
-exclude = '''
-/(
-    \.eggs
-  | \.git
-  | \.hg
-  | \.mypy_cache
-  | \.tox
-  | \.venv
-  | _build
-  | buck-out
-  | build
-  | dist
-)/
-'''
-target-version = ['py312']  # all versions that your code supports
+[tool.ruff]
+line-length = 79
+extend-exclude = ["migrations"]
+cache-dir = "/tmp/.ruff_cache"
 
-[tool.isort]
-profile = "black"
-multi_line_output = 3
-include_trailing_comma = true  # Includes a trailing comma on multi line imports that include parentheses
-line_length = 120  # max length of an import line
-known_first_party = ["app"]
-sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
-lines_between_sections = 1
+[tool.ruff.lint]
+preview = true
+select = ["I", "F", "E", "W", "PL", "PT"]
+
+[tool.ruff.lint.pydocstyle]
+convention = "google"
+
+[tool.ruff.format]
+preview = true
+quote-style = "double"
 
 [tool.mypy]
-exclude = [
-    ".venv"
-]
+exclude = []
 cache_dir = "/tmp/.mypy_cache"
 
 [tool.taskipy.tasks]
-lint = 'black .'
-format = 'isort .'
-run = 'fastapi dev app/main.py --port 8000'
-pre_test = 'task lint'
-test = 'pytest --cov --cov=app/ --cov-branch --cov-fail-under=49 -s -x -vv'
-post_test = 'coverage html'
+lint = 'ruff check . && ruff check . --diff'
+format = 'ruff check . --fix && ruff format .'
+pre_test = "task lint"
+test = "pytest --cov --cov=app --cov-branch --cov-fail-under=75"
+post_test = "coverage html"
+run = "fastapi dev app/main.py --port 8000"
+
+[tool.pytest.ini_options]
+cache_dir = "/tmp/.pytest_cache"
+addopts = "-s -x -vv"
+testpaths = [
+    "tests"
+]
+
+[tool.coverage.html]
+directory = "/tmp/htmlcov"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
