adds first entities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,9 +31,10 @@ types-python-dateutil = {version = "^2.9.0.20240316", optional = true}
 types-pytz = {version ="^2024.1.0.20240417", optional = true}
 types-PyYAML = {version = "^6.0.12.20240808", optional = true}
 fastapi = {extras = ["standard"], version = "^0.112.0"}
-uvicorn = "^0.30.6"
 pydantic-settings = "^2.4.0"
 sqlalchemy = "^2.0.32"
+alembic = "^1.13.2"
+sqlmodel = "^0.0.21"
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
@@ -49,13 +50,15 @@ taskipy = "^1.13.0"
 ruff = "^0.6.0"
 
 [tool.ruff]
-line-length = 79
+line-length = 88
 extend-exclude = ["migrations"]
 cache-dir = "/tmp/.ruff_cache"
 
 [tool.ruff.lint]
 preview = true
 select = ["I", "F", "E", "W", "PL", "PT"]
+# skip unused imports (`F401`).
+ignore = ["F401"]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
@@ -63,6 +66,7 @@ convention = "google"
 [tool.ruff.format]
 preview = true
 quote-style = "double"
+docstring-code-format = true
 
 [tool.mypy]
 exclude = []
@@ -72,9 +76,9 @@ cache_dir = "/tmp/.mypy_cache"
 lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
 pre_test = "task lint"
-test = "pytest --cov --cov=app --cov-branch --cov-fail-under=75"
+test = "pytest --cov --cov-branch --cov-fail-under=75 --cov-report term --cov-report xml:coverage.xml"
 post_test = "coverage html"
-run = "fastapi dev app/main.py --port 8000"
+run = "fastapi dev api/app.py --port 8000"
 
 [tool.pytest.ini_options]
 cache_dir = "/tmp/.pytest_cache"
