--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -29,19 +29,17 @@
             "extensions": [
 				"ms-azuretools.vscode-docker",
 				"ms-python.python",
-				"ms-python.autopep8",
-				"ms-python.flake8",
 				"ms-python.pylint",
 				"ms-python.vscode-pylance",
 				"ms-python.mypy-type-checker",
 				"ryanluker.vscode-coverage-gutters",
-				"emeraldwalk.RunOnSave",
 				"eamodio.gitlens",
 				"waderyan.gitblame",
 				"tamasfe.even-better-toml",
 				"streetsidesoftware.code-spell-checker",
 				"njpwerner.autodocstring",
-				"Supermaven.supermaven"
+				"Supermaven.supermaven",
+				"charliermarsh.ruff"
 			],
 			"settings": {
 				"terminal.integrated.scrollback": 10000,
@@ -52,16 +50,11 @@
 					}
 				},
 				// "terminal.integrated.defaultProfile.linux": "poetry-shell",  # spawns a terminal on top of sh
-				"emeraldwalk.runonsave": {
-                    "commands": [
-                        {
-                            "match": ".py",
-                            "isAsync": false,
-                            "cmd": "echo 'auto run'"
-                        }
-                    ]
-                },
-				"python.analysis.typeCheckingMode": "strict"
+				"python.analysis.typeCheckingMode": "strict",
+				"[python]": {
+					"editor.defaultFormatter": "charliermarsh.ruff",
+					"source.organizeImports": "explicit"
+				  }				
 			}
 		}
 	},
