--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,7 +45,6 @@ pytest-mock = "^3.14.0"
 pytest-cov = "^5.0.0"
 mypy = "^1.11.1"
 faker = "^27.0.0"
-pyright = "^1.1.375"
 taskipy = "^1.13.0"
 ruff = "^0.6.0"
 
@@ -53,10 +52,28 @@ ruff = "^0.6.0"
 line-length = 88
 extend-exclude = ["migrations"]
 cache-dir = "/tmp/.ruff_cache"
+exclude = ["alembic"]
 
 [tool.ruff.lint]
 preview = true
-select = ["I", "F", "E", "W", "PL", "PT"]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4",  # flake8-comprehensions
+    "UP",  # pyupgrade
+    "ARG001", # unused arguments in functions
+    "PL",  # pylint
+    "PT",  # flake8-pytest-style
+]
+ignore = [
+    "E501",  # line too long, handled by black
+    "B008",  # do not perform function calls in argument defaults
+    "W191",  # indentation contains tabs
+    "B904",  # Allow raising exceptions without from e, for HTTPException
+]
 
 [tool.ruff.lint.pydocstyle]
 convention = "google"
@@ -67,7 +84,7 @@ quote-style = "double"
 docstring-code-format = true
 
 [tool.mypy]
-exclude = []
+exclude = ["alembic", "migrations"]
 cache_dir = "/tmp/.mypy_cache"
 
 [tool.taskipy.tasks]
