--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ pydantic-settings = "^2.4.0"
 sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
 alembic = "^1.13.2"
 sqlmodel = "^0.0.21"
+asyncpg = "^0.29.0"
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
