--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -40,3 +40,4 @@ services:
       APP_DATABASE_URL: postgresql+asyncpg://postgres:postgres@database/postgres
     depends_on:
       - database
+    # command: fastapi dev app/main.py --host 0.0.0.0 --port 8000
