adds alembic migrations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ alembic = "^1.13.2"
 sqlmodel = "^0.0.21"
 asyncpg = "^0.29.0"
 faker = {extras = ["postalcode"], version = "^27.0.0"}
+psycopg2-binary = "^2.9.9"
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
@@ -88,7 +89,6 @@ quote-style = "double"
 docstring-code-format = true
 
 [tool.mypy]
-files = ["app", "tests"]
 exclude = ["alembic"]
 cache_dir = "/tmp/.mypy_cache"
 
