--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ faker = {extras = ["postalcode"], version = "^27.0.0"}
 psycopg2-binary = "^2.9.9"
 loguru = "^0.7.2"
 slowapi = "^0.1.9"
+redis = "^5.0.8"
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
