--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,8 @@ psycopg2-binary = "^2.9.9"
 loguru = "^0.7.2"
 slowapi = "^0.1.9"
 redis = "^5.0.8"
+opentelemetry-distro = "^0.47b0"
+opentelemetry-exporter-otlp = "^1.26.0"
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
