--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -55,6 +55,8 @@ jobs:
 
       - name: Test
         run: poetry run task test
+        env:
+          OTEL_SDK_DISABLED: true
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
