--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
     ports:
       - 3100:3100
     volumes:
-      - ./loki-config.yaml:/etc/loki/local-config.yaml
+      - ./observability/loki-config.yaml:/etc/loki/local-config.yaml
     command: -config.file=/etc/loki/local-config.yaml
 
   # traces
@@ -22,7 +22,7 @@ services:
     image: grafana/tempo
     container_name: tempo
     volumes:
-      - ./tempo.yaml:/etc/tempo.yaml
+      - ./observability/tempo.yaml:/etc/tempo.yaml
     ports:
       - "3200"  # tempo /metrics
       - "4317"  # otlp grpc
@@ -36,7 +36,7 @@ services:
     ports:
       - 9090:9090
     volumes:
-      - ./prometheus.yaml:/etc/prometheus/prometheus.yml
+      - ./observability/prometheus.yaml:/etc/prometheus/prometheus.yml
     command:
       - --config.file=/etc/prometheus/prometheus.yml
       - --web.enable-remote-write-receiver
@@ -56,7 +56,7 @@ services:
     ports:
       - 3000:3000
     volumes:
-      - ./grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
+      - ./observability/grafana-datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yaml
     depends_on:
       - loki
       - prometheus
@@ -68,8 +68,6 @@ services:
   database:
     image: postgres
     container_name: database
-    # volumes:
-    #   - ./volumes/postgres-data:/var/lib/postgresql/data
     ports:
       - 5432:5432
     environment:
@@ -77,6 +75,8 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
       POSTGRES_HOST_AUTH_METHOD: trust
+    # volumes:
+    #   - ./volumes/postgres-data:/var/lib/postgresql/data
 
   omnidb:
     platform: linux/amd64 # for apple processors
@@ -109,7 +109,7 @@ services:
       - 13133:13133 # health_check extension
       - 55679:55679  # zpages extension, which trace operations via /debug/tracez
     volumes:
-      - ./otel-collector-config.yaml:/etc/otel-collector-config.yaml
+      - ./observability/otel-collector-config.yaml:/etc/otel-collector-config.yaml
     command: ["--config=/etc/otel-collector-config.yaml"]
 
   app:
