--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,8 @@ taskipy = "^1.13.0"
 ruff = "^0.6.0"
 pytest-asyncio = "^0.23.8"
 aiosqlite = "^0.20.0"
+sqlalchemy-data-model-visualizer = "^0.1.3"
+graphviz = "^0.20.3"
 
 [tool.ruff]
 line-length = 88
@@ -94,7 +96,11 @@ quote-style = "double"
 docstring-code-format = true
 
 [tool.mypy]
-exclude = ["migrations"] 
+exclude = [
+    "migrations",
+    "test_redis_async.py",
+    "generate_er_diagram.py"
+]
 cache_dir = "/tmp/.mypy_cache"
 
 [tool.taskipy.tasks]
