--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ redis = "^5.0.8"
 opentelemetry-distro = "^0.47b0"
 opentelemetry-exporter-otlp = "^1.26.0"
 opentelemetry-instrumentation-fastapi = "^0.47b0"
+pyjwt = "^2.9.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
@@ -60,6 +62,7 @@ pytest-asyncio = "^0.23.8"
 aiosqlite = "^0.20.0"
 sqlalchemy-data-model-visualizer = "^0.1.3"
 graphviz = "^0.20.3"
+types-passlib = "^1.7.7.20240819"
 
 [tool.ruff]
 line-length = 88
