--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,10 @@
-[tool.poetry]
+[project]
 name = "fastapi-base"
-version = "0.0.1"
+version = "0.1.0"
 description = "Base project for FastAPI projects"
-authors = ["José Nunes <josenunesra@gmail.com>"]
-repository = "https://github.com/josejnra/fastapi-base"
-homepage = "https://github.com/josejnra/fastapi-base"
-documentation = "https://github.com/josejnra/fastapi-base"
+authors = [
+    {name = "Jose Assis",email = "josenunesra@gmail.com"}
+]
 readme = "README.md"
 classifiers = [
     "Programming Language :: Python :: 3.12",
@@ -24,46 +23,57 @@ classifiers = [
     "Topic :: System :: Software Distribution",
     "Development Status :: 3 - Alpha"
 ]
+requires-python = ">=3.12,<4.0"
+dependencies = [
+    "fastapi[standard] (>=0.115.12,<0.116.0)",
+    "pydantic-settings (>=2.9.1,<3.0.0)",
+    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
+    "alembic (>=1.16.1,<2.0.0)",
+    "sqlmodel (>=0.0.24,<0.0.25)",
+    "asyncpg (>=0.30.0,<0.31.0)",
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "loguru (>=0.7.3,<0.8.0)",
+    "slowapi (>=0.1.9,<0.2.0)",
+    "redis (>=6.2.0,<7.0.0)",
+    "opentelemetry-distro (>=0.55b1,<0.56)",
+    "opentelemetry-exporter-otlp (>=1.34.1,<2.0.0)",
+    "opentelemetry-instrumentation-fastapi (>=0.55b1,<0.56)",
+    "pyjwt (>=2.10.1,<3.0.0)",
+    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
+    "orjson (>=3.10.18,<4.0.0)"
+]
 
-[tool.poetry.dependencies]
-python = "3.12.*"
-types-python-dateutil = {version = "^2.9.0.20240316", optional = true}
-types-pytz = {version ="^2024.1.0.20240417", optional = true}
-types-PyYAML = {version = "^6.0.12.20240808", optional = true}
-fastapi = {extras = ["standard"], version = "^0.112.0"}
-pydantic-settings = "^2.4.0"
-sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
-alembic = "^1.13.2"
-sqlmodel = "^0.0.21"
-asyncpg = "^0.29.0"
-faker = {extras = ["postalcode"], version = "^27.0.0"}
-psycopg2-binary = "^2.9.9"
-loguru = "^0.7.2"
-slowapi = "^0.1.9"
-redis = "^5.0.8"
-opentelemetry-distro = "^0.47b0"
-opentelemetry-exporter-otlp = "^1.26.0"
-opentelemetry-instrumentation-fastapi = "^0.47b0"
-pyjwt = "^2.9.0"
-passlib = {extras = ["bcrypt"], version = "^1.7.4"}
-orjson = "^3.10.7"
+[project.urls]
+repository = "https://github.com/josejnra/fastapi-base"
+homepage = "https://github.com/josejnra/fastapi-base"
+documentation = "https://github.com/josejnra/fastapi-base"
+
+[build-system]
+requires = ["poetry-core>=2.0.0,<3.0.0"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry]
+package-mode = false
 
 [tool.poetry.extras]
 dev_types = ["types-python-dateutil", "types-pytz", "types-PyYAML"]
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^8.3.2"
-pytest-mock = "^3.14.0"
-pytest-cov = "^5.0.0"
-mypy = "^1.11.1"
-faker = "^27.0.0"
-taskipy = "^1.13.0"
-ruff = "^0.6.0"
-pytest-asyncio = "^0.23.8"
-aiosqlite = "^0.20.0"
+pytest = "^8.4.0"
+pytest-mock = "^3.14.1"
+pytest-cov = "^6.1.1"
+mypy = "^1.16.0"
+faker = {extras = ["postalcode"], version = "^37.3.0"}
+taskipy = "^1.14.1"
+ruff = "^0.11.13"
+pytest-asyncio = "^1.0.0"
+aiosqlite = "^0.21.0"
 sqlalchemy-data-model-visualizer = "^0.1.3"
 graphviz = "^0.20.3"
-types-passlib = "^1.7.7.20240819"
+types-passlib = "^1.7.7.20250602"
+types-python-dateutil = {version = "^2.9.0.20250516", optional = true}
+types-pytz = {version = "^2025.2.0.20250516", optional = true}
+types-pyyaml = {version = "^6.0.12.20250516", optional = true}
 
 [tool.ruff]
 line-length = 88
@@ -113,7 +123,7 @@ lint = 'ruff check . && ruff check . --diff'
 format = 'ruff check . --fix && ruff format .'
 pre_test = "task lint"
 test = "pytest --cov --cov-branch --cov-fail-under=75 --cov-report term --cov-report xml:coverage.xml"
-post_test = "coverage html"
+post_test = "coverage html && mypy ."
 run = "fastapi dev app/main.py --port 8000"
 
 [tool.pytest.ini_options]
@@ -127,6 +137,3 @@ asyncio_mode = "auto"
 [tool.coverage.html]
 directory = "/tmp/htmlcov"
 
-[build-system]
-requires = ["poetry-core>=1.0.0"]
-build-backend = "poetry.core.masonry.api"
